app-routing-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://globalazuredemokv.vault.azure.net/certificates/aks-ingress-tls/e7068c381d91414b947952ecba8f039a
  name: aks-store-front
  namespace: aksappga
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: store-front.globalazuredemomsft.com
    http:
      paths:
      - backend:
          service:
            name: store-front
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - store-front.globalazuredemomsft.com
    secretName: keyvault-aks-store-front
